<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:background="@drawable/frame_dialog">

    <TextView
        android:id="@+id/tv_softTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:text="@string/dialog_change_soft_title"
        android:textColor="@color/dialog_title_tx"
        android:textSize="@dimen/dialog_title_size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/rg_soft_choice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
        android:id="@+id/rg_soft_choice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/tv_softTitle"
        app:layout_constraintBottom_toTopOf="@+id/v_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radio_soft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="@dimen/radio_button_margin_x"
            android:layout_marginEnd="@dimen/radio_button_margin_x"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:gravity="center"
            android:button="@null"
            android:background="@drawable/radio_button_selector_bg"
            android:textColor="@drawable/radio_button_selector_tx"
            android:textSize="@dimen/radio_button_tx"
            android:text="@string/dialog_change_soft_too_soft"/>

        <RadioButton
            android:id="@+id/radio_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="@dimen/radio_button_margin_x"
            android:layout_marginEnd="@dimen/radio_button_margin_x"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:gravity="center"
            android:button="@null"
            android:background="@drawable/radio_button_selector_bg"
            android:textColor="@drawable/radio_button_selector_tx"
            android:textSize="@dimen/radio_button_tx"
            android:text="@string/dialog_change_soft_soft"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radio_little_hard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"
            android:layout_marginStart="@dimen/radio_button_margin_x"
            android:layout_marginEnd="@dimen/radio_button_margin_x"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:gravity="center"
            android:button="@null"
            android:background="@drawable/radio_button_selector_bg"
            android:textColor="@drawable/radio_button_selector_tx"
            android:textSize="@dimen/radio_button_tx"
            android:text="@string/dialog_change_soft_little_hard"/>

    </RadioGroup>

    <!--    区切り線    -->
    <View
        android:id="@+id/v_border"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_partition_line"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/dialog_stroke"
        app:layout_constraintBottom_toTopOf="@+id/iv_positive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/iv_positive"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/baseline_footprints"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>