<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- フレーム1 -->
    <!-- 物理空間 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gl_view_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- フレーム2 -->
    <!-- 画面下部UI -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <!-- 左：各種操作メニューの説明  -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/root_explanation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:paddingStart="16dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/touch_message"
            app:layout_constraintEnd_toStartOf="@+id/cl_menu"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/explanation_gravity_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/baseline_menu_exp_gravity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/explanation_gravity"
                android:layout_width="0dp"
                android:layout_height="@dimen/menu_explanation_tx_height"
                android:layout_marginStart="@dimen/menu_explanation_margin"
                android:text="@string/fluid_bottom_menu_contents_gravity"
                app:autoSizeMaxTextSize="@dimen/menu_explanation_max_tx"
                app:autoSizeMinTextSize="@dimen/menu_explanation_min_tx"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="@+id/explanation_gravity_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/explanation_gravity_icon"
                app:layout_constraintTop_toTopOf="@+id/explanation_gravity_icon" />

            <ImageView
                android:id="@+id/explanation_soft_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/menu_explanation_line_spacing"
                android:background="@drawable/baseline_menu_exp_soft"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/explanation_gravity_icon" />

            <TextView
                android:id="@+id/explanation_soft"
                android:layout_width="0dp"
                android:layout_height="@dimen/menu_explanation_tx_height"
                android:layout_marginStart="@dimen/menu_explanation_margin"
                android:text="@string/fluid_bottom_menu_contents_soft"
                app:autoSizeMaxTextSize="@dimen/menu_explanation_max_tx"
                app:autoSizeMinTextSize="@dimen/menu_explanation_min_tx"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="@+id/explanation_soft_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/explanation_soft_icon"
                app:layout_constraintTop_toTopOf="@+id/explanation_soft_icon" />

            <ImageView
                android:id="@+id/explanation_bullet_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/menu_explanation_line_spacing"
                android:background="@drawable/baseline_menu_exp_bullet"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/explanation_soft_icon" />

            <TextView
                android:id="@+id/explanation_bullet"
                android:layout_width="0dp"
                android:layout_height="@dimen/menu_explanation_tx_height"
                android:layout_marginStart="@dimen/menu_explanation_margin"
                android:text="@string/fluid_bottom_menu_contents_bullet"
                app:autoSizeMaxTextSize="@dimen/menu_explanation_max_tx"
                app:autoSizeMinTextSize="@dimen/menu_explanation_min_tx"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="@+id/explanation_bullet_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/explanation_bullet_icon"
                app:layout_constraintTop_toTopOf="@+id/explanation_bullet_icon" />

            <ImageView
                android:id="@+id/explanation_center_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/menu_explanation_line_spacing"
                android:background="@drawable/baseline_menu_exp_center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/explanation_bullet_icon" />

            <TextView
                android:id="@+id/explanation_center"
                android:layout_width="0dp"
                android:layout_height="@dimen/menu_explanation_tx_height"
                android:layout_marginStart="@dimen/menu_explanation_margin"
                android:text="@string/fluid_bottom_menu_contents_center"
                app:autoSizeMaxTextSize="@dimen/menu_explanation_max_tx"
                app:autoSizeMinTextSize="@dimen/menu_explanation_min_tx"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="@+id/explanation_center_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/explanation_center_icon"
                app:layout_constraintTop_toTopOf="@+id/explanation_center_icon" />

            <ImageView
                android:id="@+id/explanation_home_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/menu_explanation_line_spacing"
                android:background="@drawable/baseline_menu_exp_home"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/explanation_center_icon" />

            <TextView
                android:id="@+id/explanation_home"
                android:layout_width="0dp"
                android:layout_height="@dimen/menu_explanation_tx_height"
                android:layout_marginStart="@dimen/menu_explanation_margin"
                android:text="@string/fluid_bottom_menu_contents_home"
                app:autoSizeMaxTextSize="@dimen/menu_explanation_max_tx"
                app:autoSizeMinTextSize="@dimen/menu_explanation_min_tx"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="@+id/explanation_home_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/explanation_home_icon"
                app:layout_constraintTop_toTopOf="@+id/explanation_home_icon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/touch_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:paddingStart="20dp"
            android:paddingEnd="100dp"
            android:paddingBottom="14dp"
            app:layout_constraintEnd_toStartOf="@+id/cl_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/root_explanation">

            <TextView
                android:id="@+id/text_message"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="12dp"
                android:text="@string/fluid_bottom_title"
                android:textStyle="bold"
                app:autoSizeMaxTextSize="38sp"
                app:autoSizeMinTextSize="14sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_sub_message"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/fluid_bottom_message"
                app:autoSizeMaxTextSize="38sp"
                app:autoSizeMinTextSize="14sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_message" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <!-- 右：操作アイコン -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- 展開後メニュー -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_menu_expanded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:background="@drawable/border_menu_expanded"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/cl_menu_collapsed"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageButton
                    android:id="@+id/ib_gravity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/menu_icon_margin"
                    android:background="@drawable/baseline_menu_icon_gravity"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/ib_soft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/menu_icon_margin"
                    android:background="@drawable/baseline_menu_icon_soft"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ib_gravity" />

                <ImageButton
                    android:id="@+id/ib_bullet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/menu_icon_margin"
                    android:background="@drawable/baseline_menu_icon_bullet"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ib_soft" />

                <ImageButton
                    android:id="@+id/ib_center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/menu_icon_margin"
                    android:background="@drawable/baseline_menu_icon_center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ib_bullet" />

                <ImageButton
                    android:id="@+id/ib_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/menu_icon_margin"
                    android:background="@drawable/baseline_menu_icon_home"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ib_center" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- 展開前メニュー -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_menu_collapsed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border_menu_collapsed"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageButton
                    android:id="@+id/ib_menu_expand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/menu_icon_margin"
                    android:background="@drawable/baseline_menu_icon_expand"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
